// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionLabels component should render correctly 1`] = `
<div>
  <div
    class="position-labels"
  >
    <div
      class="position-labels__item position-labels__item--filled"
    >
      
    Remote
  
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`PositionLabels component should render correctly without data 1`] = `
<div>
  <!---->
</div>
`;
